# reprompi-dev

./: .gitignore  CMakeLists.txt  ChangeLog  Changes.txt  README.md
benchmaker/lib/: bench_functions_gen.py  code_parser.py
cmake_modules/: FindHwloc.cmake  FindLIKWID.cmake  FindPGMPI.cmake
docker/: Dockerfile
examples/pgcheck/: input.txt
pgchecker/: 01-setup.py  02-create-exp.py  config.py  config_user.py
platform_files/: Titan.cmake  default.cmake  macos.cmake  scorep.cmake
src/: benchmarkCollective.c  benchmarkCollective.h  benchmarkMPIcalls.c  benchmarkMPIcalls2.c  benchmark_job.c  benchmark_job.h  round_sync.c  version.h
src/collective_ops/: collectives.c  collectives.h
src/log/: zf_log.c  zf_log.h
src/modules/: utils.c  utils.h
src/modules/MPI_T_pvar/: MPI_T_pvar_module.c  MPI_T_pvar_module.h
src/modules/likwid/: likwid_module.c  likwid_module.h
src/modules/papi/: papi_module.c  papi_module.h
src/modules/proc/: proc_module.c  proc_module.h
src/modules/roth_tracing/: roth_tracing_module.c  roth_tracing_module.h
src/nrep_prediction/: CMakeLists.txt  nrep_pred.c
src/pgcheck/: CMakeLists.txt  README.md  constants.h  pgcheck_helper.cpp  pgcheck_helper.h  pgcheck_input.cpp  pgcheck_input.h  pgcheck_options.cpp  pgcheck_options.h  pgchecker.cpp  pgcomparer_results.cpp  pgcomparer_results.h  pgdata.cpp  pgdata.h  pgdata_comparer.cpp  pgdata_comparer.h  pgdata_printer.cpp  pgdata_printer.h  pgdata_table.cpp  pgdata_table.h  pgtunelib_interface.cpp  pgtunelib_interface.h
src/pgcheck/comparer/: abs_runtime_comparer.cpp  abs_runtime_comparer.h  comparer_data.cpp  comparer_data.h  comparer_factory.cpp  comparer_factory.h  default_comparer.cpp  default_comparer.h  detailed_ttest_comparer.cpp  detailed_ttest_comparer.h  detailed_wilcoxon_comparer.cpp  detailed_wilcoxon_comparer.h  grouped_ttest_comparer.cpp  grouped_ttest_comparer.h  median_runtime_comparer.cpp  median_runtime_comparer.h  rel_runtime_comparer.cpp  rel_runtime_comparer.h  simple_comparer.cpp  simple_comparer.h  ttest_comparer.cpp  ttest_comparer.h
src/pgcheck/comparer/raw/: raw_comparer.cpp  raw_comparer.h
src/pgcheck/comparer/runtime/: abs_runtime_comparer.cpp  abs_runtime_comparer.h  rel_runtime_comparer.cpp  rel_runtime_comparer.h
src/pgcheck/comparer/statistical_test/: ttest.cpp  ttest.h  two_sample_test.cpp  two_sample_test.h  two_sample_test_factory.cpp  two_sample_test_factory.h  wilcoxon.cpp  wilcoxon.h  wilcoxon_mann_whitney.cpp  wilcoxon_mann_whitney.h  wilcoxon_rank_sum.cpp  wilcoxon_rank_sum.h
src/pgcheck/comparer/statistical_tests/: ttest.h  wilcoxon.cpp  wilcoxon.h
src/pgcheck/comparer/violation/: detailed_violation_comparer.cpp  detailed_violation_comparer.h  grouped_violation_comparer.cpp  grouped_violation_comparer.h  violation_comparer.cpp  violation_comparer.h
src/pgcheck/logger/: logger.cpp  logger.h
src/pgcheck/utils/: argv_manager.cpp  argv_manager.h  csv_parser.cpp  csv_parser.h  statistics_utils.cpp  statistics_utils.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h
src/pred_bench/: CMakeLists.txt  benchmarkMPIcallsPred.c  parse_options.c  parse_options.h
src/pred_bench/prediction_methods/: cov_mean.c  cov_median.c  rse.c
src/reprompi_bench/: misc.c  misc.h
src/reprompi_bench/benchmark_lib/: CMakeLists.txt  reproMPIbenchmark.c  reproMPIbenchmark.h  results_output.c  results_output.h
src/reprompi_bench/caching/: caching.c  caching.h  clear_cache_memset.c  warm_cache.c
src/reprompi_bench/option_parser/: option_parser_helpers.c  parse_options.c  (+6 more)
src/reprompi_bench/sync/clock_sync/: CMakeLists.txt  clock_sync_common.cpp  clock_sync_common.h  clock_sync_lib.h  clock_sync_loader.cpp  clock_sync_loader.hpp  hca3_sync.c  hca_sync.c  hca_sync.cpp  jk_sync.c  jk_sync.cpp  no_sync.c  sk_sync.c  sk_sync.cpp  synchronization.c  synchronization.h  topo_aware_2l_sync.cpp  topo_aware_sync.cpp
src/reprompi_bench/sync/clock_sync/clock_offset_algs/: ClockOffset.cpp  ClockOffset.h  ClockOffsetAlg.cpp  ClockOffsetAlg.h  PingpongClockOffsetAlg.cpp  PingpongClockOffsetAlg.h  SKaMPIClockOffsetAlg.cpp  SKaMPIClockOffsetAlg.h
src/reprompi_bench/sync/clock_sync/clocks/: Clock.h  GettimeClock.cpp  GettimeClock.h  GlobalClock.cpp  GlobalClock.h  GlobalClockLM.cpp  GlobalClockLM.h  GlobalClockOffset.cpp  GlobalClockOffset.h  MPIClock.cpp  MPIClock.h  RdtscClock.h  RdtscpClock.cpp  RdtscpClock.h
src/reprompi_bench/sync/clock_sync/sync_methods/: ClockPropagationSync.cpp  ClockPropagationSync.h  ClockSync.h  ClockSyncInterface.h  HCA2ClockSync.cpp  HCA2ClockSync.h  HCA3ClockSync.cpp  HCA3ClockSync.h  HCAAbstractClockSync.cpp  HCAAbstractClockSync.h  HCAClockSync.cpp  HCAClockSync.h  HierarchicalClockSync.cpp  HierarchicalClockSync.h  JKClockSync.cpp  JKClockSync.h  LinearModelFitterDebug.cpp  LinearModelFitterDebug.hpp  LinearModelFitterStandard.cpp  LinearModelFitterStandard.hpp  SKaMPIClockSync.cpp  SKaMPIClockSync.h  TwoLevelClockSync.cpp  TwoLevelClockSync.h
src/reprompi_bench/sync/clock_sync/sync_methods/offset/: HCA3OffsetClockSync.cpp  SKaMPIClockSync.cpp
src/reprompi_bench/sync/clock_sync/utils/: communicator_utils.cpp  communicator_utils.h  hwloc_helpers.cpp  hwloc_helpers.h  sync_errors.cpp  sync_info.c  sync_info.h  sync_utils.h
src/sanity_check/: CMakeLists.txt  compare_clocks.c  measure_clock_drift.c  measure_rtt.c  parse_test_options.c  parse_test_options.h  sync_duration.c
src/sanity_check/clock/: verify_clock.c
src/sanity_check/clock_drift/: clock_drift_utils.c  clock_drift_utils.h  measure_clock_drift.c  measure_clock_drift_new.c  measure_clock_drift_rep.c  measure_real_clock_drift.c  parse_drift_test_options.c  parse_drift_test_options.h
src/sanity_check/clock_sync_stress/: clock_sync_stress_test.c
src/sanity_check/libtests/: CMakeLists.txt  benchtest1.c
src/sanity_check/local_clock_drift/: CMakeLists.txt  clock_drift  measure_local_clock_drift.c  parse_test_options.c  parse_test_options.h
src/test/: CMakeLists.txt
src/test/test_output/: CMakeLists.txt  test_output_types.c
src/test/test_output/test_files/: test1.txt
(+84 files in other folders)
